package work3.text;

/**
 * TextComponent — абстракція компонента в патерні Decorator для текстових елементів.
 * Визначає базові операції: отримати текст після застосування декораторів,
 * відобразити його (display) і отримати текстовий опис (getDescription).
 *
 * Учасник шаблону: Component.
 */
public interface TextComponent {
    /**
     * Повертає текст з урахуванням всіх застосованих ефектів (не виконує друку).
     * @return оброблений рядок тексту
     */
    String getText();

    /**
     * Метод відображення — в нашій реалізації виконує заглушку з виводом у консоль.
     */
    void display();

    /**
     * Повертає опис елемента і стеку застосованих ефектів.
     * Наприклад: "Базовий текстовий елемент у верхньому регістрі з новою строкою в кінці".
     * @return опис
     */
    String getDescription();
}
